# consensus-problem

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/apps/: CMakeLists.txt
src/apps/consensus-problem/: CMakeLists.txt  main.cpp
src/apps/consensus-problem/main/: datatypedRun.cpp  datatypedRun.hpp  run.cpp  run.hpp
src/lib/: CMakeLists.txt
src/lib/agentsstate/: AgentsState.cpp
src/lib/consensus-problem/agentsstate/: AgentsState.hpp
src/lib/consensus-problem/rule/: Rule.hpp
src/lib/consensus-problem/rulesmanager/: RulesManager.hpp
src/lib/consensus-problem/solver/linearsystemsolver/: LinearSystemSolver.hpp
src/lib/consensus-problem/solver/montecarlosolver/: MonteCarloSolver.hpp
src/lib/consensusproblem/: CMakeLists.txt
src/lib/consensusproblem/rule/: Rule.cpp  Rule.hpp  Rule11.cpp  Rule11.hpp  Rule12.cpp  Rule12.hpp  Rule21.cpp  Rule21.hpp  Rule22.cpp  Rule22.hpp  createRule.cpp  createRule.hpp
src/lib/consensusproblem/solver/: LinearSystemSolver.cpp  LinearSystemSolver.hpp  LinearSystemSolver.tpp  MonteCarloSolver.cpp  MonteCarloSolver.hpp  MonteCarloSolver.tpp  Solver.cpp  Solver.hpp
src/lib/linearsystem/: CMakeLists.txt  LinearSystem.cpp  LinearSystem.hpp  LinearSystem.tpp
src/lib/linearsystem/size/: LinearSystemSize.cpp  LinearSystemSize.hpp
src/lib/linearsystemsolver/: LinearSystemSolver.cpp  LinearSystemSolver.hpp
src/lib/linearsystemsolver/gauss/: Gauss.hpp  Gauss.tpp
src/lib/linearsystemsolver/gauss/partial/: PartialGauss.cpp  PartialGauss.hpp  PartialGauss.tpp
src/lib/matrix/: CMakeLists.txt  Matrix.hpp  Matrix.tpp  matrix.hpp
src/lib/matrix/dense/: DenseMatrix.cpp  DenseMatrix.hpp  DenseMatrix.tpp
src/lib/matrix/densematrix/: DenseMatrix.hpp  DenseMatrix.tpp
src/lib/matrix/densematrix/row/: DenseMatrixRow.cpp  DenseMatrixRow.hpp  DenseMatrixRow.tpp
src/lib/matrix/matrixsize/: MatrixSize.cpp
src/lib/matrix/row/: MatrixRow.hpp
src/lib/matrix/size/: MatrixSize.cpp  MatrixSize.hpp
src/lib/matrix/sparse/: SparseMatrix.hpp  SparseMatrix.tpp
src/lib/matrix/sparsematrix/: SparseMatrix.hpp  SparseMatrix.tpp
src/lib/matrix/sparsematrix/row/: SparseMatrixRow.cpp  SparseMatrixRow.hpp
src/lib/montecarlosolver/: MonteCarloSolver.hpp
src/lib/numalg/: CMakeLists.txt
src/lib/numalg/linearsystemsolver/: CMakeLists.txt  LinearSystemSolver.hpp
src/lib/numalg/linearsystemsolver/gauss/: Gauss.cpp  Gauss.hpp  Gauss.tpp
src/lib/numalg/linearsystemsolver/gauss/partial/: PartialGauss.hpp  PartialGauss.tpp
src/lib/numalg/linearsystemsolver/gaussseidel/: GaussSeidel.cpp  GaussSeidel.hpp  GaussSeidel.tpp
src/lib/numalg/linearsystemsolver/jacobi/: Jacobi.cpp  Jacobi.hpp  Jacobi.tpp
src/lib/rule/: Rule.hpp
src/lib/rulesmanager/: RulesManager.hpp
src/lib/solvelinearsystem/: CMakeLists.txt  partialGauss.cpp  partialGauss.hpp  partialGauss.tpp
tests/: CMakeLists.txt
tests/lib/: CMakeLists.txt
tests/lib/consensus-problem/solver/monecarlosolver/: Test_MonteCarloSolver.cpp
tests/lib/consensusproblem/: CMakeLists.txt
tests/lib/consensusproblem/solver/: CMakeLists.txt  test_LinearSystemSolver.cpp  test_MonteCarloSolver.cpp
tests/lib/consensusproblem/solver/linearsystem/: CMakeLists.txt  test_LinearSystemSolver.cpp
tests/lib/consensusproblem/solver/montecarlo/: CMakeLists.txt  test_MonteCarloSolver.cpp
tests/lib/linearsystem/: CMakeLists.txt  test_LinearSystem.cpp
tests/lib/linearsystemsolver/: CMakeLists.txt
tests/lib/linearsystemsolver/gauss/: CMakeLists.txt
tests/lib/linearsystemsolver/gauss/partial/: CMakeLists.txt  test_PartialGauss.cpp
tests/lib/matrix/: CMakeLists.txt
tests/lib/matrix/dense/: test_DenseMatrix.cpp
tests/lib/matrix/densematrix/: CMakeLists.txt  test_DenseMatrix.cpp
tests/lib/matrix/sparse/: CMakeLists.txt  test_SparseMatrix.cpp
tests/lib/matrix/sparsematrix/: test_SparseMatrix.cpp
tests/lib/numalg/linearsystemsolver/: CMakeLists.txt
tests/lib/numalg/linearsystemsolver/gauss/partial/: test_PartialGauss.cpp
tests/lib/numalg/linearsystemsolver/jacobi/: CMakeLists.txt  test_Jacobi.cpp
tests/lib/solvelinearsystem/: CMakeLists.txt
tests/lib/solvelinearsystem/partialgauss/: CMakeLists.txt  test_partialGauss.cpp
